Fix z-index issue

--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -16,7 +16,7 @@
     justify-content: center;
     overflow-y: auto;
     overflow-x: hidden;
-    z-index: 1000;
+    z-index: 10001;
   }
 
   &.modal__backdrop {
